--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body { /* Estilos para el html y el body */
     margin: 0; /* Elimina el margen por defecto */
     padding: 0; /* Elimina el padding por defecto */
     /*background-color:#3b1346; /* Fondo clar  o */
-    background-image: url("img/img\ tare\ 2.png");
+    background-image: url("img/fondo\ pipipi.avif");
 }
 
 main { /* Estilo para el elemento main */
